# Mujoco_controller_playground

./: .gitignore  CMakeLists.txt  main.cpp
Utility/MujocoController/: MujocoController.cpp  MujocoController.h  MujocoUI.cpp
Utility/MujocoController/franka_sim-master/assets/: actuator0.xml  chain0.xml
Utility/stdInclude/: stdInclude.h
iLQR/: iLQR_funcs.cpp  iLQR_funcs.h  ilqrCore.cpp  ilqrCore.h
ikValidater/: ikValidater.cpp  ikValidater.h
ikfast/: ikfastPanda.cpp
